# sql-server-diagnostics-mcp

./: .env.example  .gitignore  PERMISSIONS.md  README.md  ROADMAP.md  prd.md  profiles.example.json  pyproject.toml
desktop/: index.html  package-lock.json  package.json
desktop/scripts/: run_profiled_server.py
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: credential_store.rs  lib.rs  main.rs
desktop/src/lib/: api.ts  types.ts
scripts/: bootstrap-sql-tshooter.ps1  run-sql-tshooter-mcp.ps1  run_sql_tshooter_mcp.py
sql/: create-readonly-login.sql  create-readonly-windows-login.sql
src/sql_tshooter/: __init__.py  config.py  db.py  errors.py  launcher.py  logging_config.py  paths.py  preflight.py  profiled_server.py  profiles.py  secret_store.py  server.py  toolkit.py  triage_guidance.py
src/sql_tshooter/tools/: __init__.py  common.py  get_active_requests.py  get_blocking_details.py  get_blocking_sessions.py  get_connection_pressure.py  get_database_hotspots.py  get_database_sizes.py  get_disk_latency.py  get_expensive_queries.py  get_failed_jobs.py  get_lock_summary.py  get_memory_status.py  get_plan_cache_summary.py  get_query_memory_grants.py  get_query_plan_summary.py  get_query_store_plan_variants.py  get_query_store_query_detail.py  get_query_store_regressions.py  get_query_store_top_queries.py  get_session_pressure.py  get_table_scan_summary.py  top_waits.py  (+7 more)
tests/: test_config.py  test_db.py  test_launcher.py  test_logging_config.py  test_preflight.py  test_profiles.py  test_server.py  test_tools.py
