[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-tshooter"
version = "0.1.0"
description = "Read-only MCP server for SQL Server diagnostics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.0.0",
  "pyodbc>=5.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[project.scripts]
sql-tshooter-mcp = "sql_tshooter.server:main"
sql-tshooter-profiled-mcp = "sql_tshooter.profiled_server:main"
sql-tshooter-preflight = "sql_tshooter.preflight:main"
sql-tshooter-launch = "sql_tshooter.launcher:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
