[package]
name = "sql-tshooter-desktop"
version = "0.1.0"
description = "Tauri desktop shell for SQL TShooter and Codex CLI"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "sql_tshooter_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1.0.93"
dirs = "5.0.1"
futures-util = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = "0.24.0"
url = "2.5.3"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
